features txt var

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --mail-phone-color: #757575;
   --cards-txt-color: #757575;
   --cards-bg-color: #ffffff;
+  --features-txt: #757575;
 }
 
 body {
@@ -225,7 +226,7 @@ button:focus {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: #757575;
+  color: var(--features-txt);
 }
 
 .name {
