--- a/css/styles.css
+++ b/css/styles.css
@@ -644,7 +644,7 @@ address {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  fill: #AFB1B8;
+  fill: #afb1b8;
 }
 
 .sm-circle-bg:hover,
